prevent the screen from jumping when a vertical scrollbar is added to the page

--- a/src/KeyCdr.UI.Web/assets/css/reset.scss
+++ b/src/KeyCdr.UI.Web/assets/css/reset.scss
@@ -10,3 +10,8 @@ html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockq
 	vertical-align: baseline;
 }
 
+/* prevent horizontal jump when scrollbar added  this doesn't work 100% as desired, offsets the left side of the screen*/
+html {
+    width:100vw;
+    overflow-x:hidden;
+}
